Modification variable scss / Titre HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="src/css/style.css">
 
-    <title>Alexis Carangeot - Développeur web</title>
+    <title>Titre</title>
 </head>
 
 <body>
